tdf#104079 RTF import: fix handling fields inside TOC fields

The marker trick is not needed for these, but the paragraph margins are
lost when using it, so avoid it.

Change-Id: I3fc9644cb85138b5473cb1478196ae8538041fb1
Reviewed-on: https://gerrit.libreoffice.org/43446
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Jenkins <ci@libreoffice.org>